--- a/locale/de/base.cfg
+++ b/locale/de/base.cfg
@@ -3,3 +3,9 @@ fuel-train-stop=Treibstoff Haltestelle
 
 [mod-description]
 FuelTrainStop=Dieser Mod ermöglicht, dass Züge, die wenig Treibstoff haben, automatisch die Treibstoff Haltestelle anfahren um Treibstoff nachfüllen zu können.
+
+[mod-setting-name]
+min-fuel-amount=min. Treibstoffmenge
+
+[mod-setting-description]
+min-fuel-amount=Der Wert gibt die Mindestmenge an Kohle für einen Vanilla-Zug an.\nZüge mit einem höheren Verbrauch, bekommen eine höhere Mindestmenge\nAchtung!!\nBei zu hohem Wert, kann der Zug un unterbrochen zur Treibstoff-Haltestelle fahren.
